- Code voor ophalen wms service met geotools iets verbeterd.